rules for build junk: duplicate flattened-pom, stray XSDs, root artifacts